feat: adicionando um patch para entregador
